--- a/views/index.ejs
+++ b/views/index.ejs
@@ -2,10 +2,13 @@
 <html>
   <head>
     <title><%= title %></title>
-    <link rel='stylesheet' href='/stylesheets/style.css' />
+    <link rel='stylesheet' href='/content/app.css' />
   </head>
   <body>
     <h1><%= title %></h1>
+    <h2><%= subTitle %></h2>
     <p>Hello World!</p>
+
+    <script src="/scripts/app.js"></script>
   </body>
 </html>
