--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,14 +1,22 @@
 <!DOCTYPE html>
-<html>
-  <head>
-    <title><%= title %></title>
-    <link rel='stylesheet' href='/content/app.css' />
-  </head>
-  <body>
-    <h1><%= title %></h1>
-    <h2><%= subTitle %></h2>
-    <p>Hello World!</p>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <title><%= title %></title>
+  <!-- styles section -->
+  <link rel='stylesheet' href='/bootstrap/dist/css/bootstrap.min.css' />
+  <link rel='stylesheet' href='/@fortawesome/fontawesome-free/css/all.min.css' />
+  <link rel='stylesheet' href='/content/app.css' />
+</head>
+<body>
+  <h1>Welcome to the <%= title %> page</h1>
+  <p>Hello World!</p>
 
-    <script src="/scripts/app.js"></script>
-  </body>
+  <!-- Scripts section -->
+  <script src='/jquery/dist/jquery.min.js'></script>
+  <script src='/bootstrap/dist/js/bootstrap.min.js'></script>
+  <script src='/scripts/app.js'></script>
+</body>
 </html>
