--- a/views/error.ejs
+++ b/views/error.ejs
@@ -1,3 +1,13 @@
-<h1><%= message %></h1>
-<h2><%= error.status %></h2>
-<pre><%= error.stack %></pre>
+<% include partials/header.ejs %>
+<% include partials/main_nav.ejs %>
+
+<main class="container">
+    <div class='bg-light p-5 rounded'>
+        <h1><%= message %></h1>
+        <h2><%= error.status %></h2>
+        <pre><%= error.stack %></pre>
+    </div>
+</main>
+
+<% include partials/bottom_nav.ejs %>
+<% include partials/footer.ejs %>
