--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -1,7 +1,7 @@
 <!-- Scripts section -->
-<script src='/jquery/dist/jquery.min.js'></script>
-<script src='/bootstrap/dist/js/bootstrap.min.js'></script>
-<script src='/scripts/app.js'></script>
+<script type="text/javascript" src='/jquery/dist/jquery.min.js'></script>
+<script type="text/javascript" src='/bootstrap/dist/js/bootstrap.min.js'></script>
+<script type="text/javascript" src='/scripts/app.js'></script>
 </body>
 
 </html>
