--- a/views/partials/main_nav.ejs
+++ b/views/partials/main_nav.ejs
@@ -1,8 +1,10 @@
 <!-- Main navigation -->
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+
   <div class="container-fluid">
     <a class="navbar-brand" href="/">My Web App</a>
-    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
+
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
       aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
