added model, form and redirection from one page to another

--- a/views/contact.ejs
+++ b/views/contact.ejs
@@ -10,7 +10,7 @@
         <br />
         <br />
 
-        <form>
+        <form action="/contact" method="POST">
             <label for="fname">First name:</label>
             <input type="text" id="fname" name="fname"><br><br>
             <input type="submit" value="Submit">
