--- a/views/error.ejs
+++ b/views/error.ejs
@@ -1,6 +1,7 @@
 <% include partials/header.ejs %>
 <% include partials/main_nav.ejs %>
 
+<!-- Main Content section -->
 <main class="container">
     <div class='bg-light p-5 rounded'>
         <h1><%= message %></h1>
