moved some files around to have better structure, added CRUD operations for Book

--- a/server/views/partials/main_nav.ejs
+++ b/server/views/partials/main_nav.ejs
@@ -45,6 +45,15 @@
           </a>
         </li>
 
+        <% if (title === 'Books') { %>
+          <li class="nav-item active">
+            <% } else { %>
+          <li class="nav-item">
+            <% } %>
+            <a class="nav-link" aria-current="page" href="/book/list"> <i class="fas fa-lg fa-book-reader"></i> Books
+            </a>
+          </li>
+
         <% if (title === 'Contact Us') { %>
         <li class="nav-item active">
           <% } else { %>
