--- a/server/views/book/list.ejs
+++ b/server/views/book/list.ejs
@@ -1,20 +1,25 @@
-<% include partials/header.ejs %>
-<% include partials/main_nav.ejs %>
+<% include ../partials/header.ejs %>
+<% include ../partials/main_nav.ejs %>
 
 <!-- Main Content section -->
 <main class="container">
 <div class="row">
     <div class="col-md-offset-3 col-md-12">
         <h1><%= title %></h1>
+        <a href="/book/add" class="btn btn-primary" role="button">
+        <i class="fas fa-plus-circle"> Add a Book</i>
+        </a>
         <br />
         <table class="table table-bordered table-striped table-hover">
             <!-- Header Row -->
             <tr>
-                <th class="text-center">Name</th>
+                <th class="text-center">Title</th>
                 <th class="text-center">Author</th>
                 <th class="text-center">Published</th>
                 <th class="text-center">Description</th>
                 <th class="text-center">Price</th>
+                <th class="text-center"></th>
+                <th class="text-center"></th>
             </tr>
 
             <!-- Repeatable Template Row -->
@@ -25,6 +30,16 @@
                     <td class="text-center"><%= books[count].published %></td>
                     <td class="text-center"><%= books[count].description %></td>
                     <td class="text-center"><%= books[count].price %></td>
+                    <th class="text-center">
+                        <a href="/book/edit/<%= books[count]._id %>" class="btn btn-primary btn-sm">
+                            <i class="fas fa-pencil-alt"> Edit</i>
+                        </a>
+                    </th>
+                    <th class="text-center">
+                        <a href="/book/delete/<%= books[count]._id %>" class="btn btn-danger btn-sm">
+                            <i class="fas fa-trash-alt"> Delete</i>
+                        </a>
+                    </th>
                 </tr>
                 <% } %>
         </table>
@@ -32,5 +47,5 @@
 </div>
 </main>
 
-<% include partials/bottom_nav.ejs %>
-<% include partials/footer.ejs %>
+<% include ../partials/bottom_nav.ejs %>
+<% include ../partials/footer.ejs %>
