authentication is added

--- a/server/views/index.ejs
+++ b/server/views/index.ejs
@@ -7,7 +7,7 @@
     <h1 class="display-4">Welcome to the <%= title %> page</h1>
     <p>Hello World!</p>
     <% if (title === 'Home') { %>
-      <p>Name: <%= contact.firstName %></p>
+      <p>Name: <%= displayName %></p>
     <% } %>
   </div>
 </main>
