--- a/server/views/book/edit.ejs
+++ b/server/views/book/edit.ejs
@@ -21,7 +21,7 @@
                 </div>
                 <div class="form-group">
                     <label for="bookDescription">Description</label>
-                    <textarea class="form-control" name="bookDescription" id="bookDescription" value="<%= book.description %>" required></textarea>
+                    <textarea class="form-control" name="bookDescription" id="bookDescription" rows="3" required><%= book.description %></textarea>
                 </div>
                 <div class="form-group">
                     <label for="bookPrice">Price</label>
