--- a/server/views/partials/main_nav.ejs
+++ b/server/views/partials/main_nav.ejs
@@ -61,6 +61,20 @@
           <% } %>
           <a class="nav-link" aria-current="page" href="/contact"><i class="fas fa-lg fa-id-badge"></i> Contact Us </a>
         </li>
+
+        <% if (typeof displayName == 'string' && displayName) { %>
+          <li class="navbar-text"><i class="fas fa-lg fa-user"></i> Welcome, <%= displayName %> </li>
+            <% } else { %>
+          <li class="nav-item">
+            <a class="nav-link" aria-current="page" href="/login"><i class="fas fa-lg fa-sign-in-alt"></i> Login </a>
+            <% } %>
+          </li>
+
+          <% if (typeof displayName == 'string' && displayName) { %>
+            <li class="nav-item">
+              <a class="nav-link" aria-current="page" href="/logout"><i class="fas fa-lg fa-sign-out-alt"></i> Logout </a>
+            </li>
+            <% } %>
       </ul>
     </div>
   </div>
