added navigation buttons and updated footer

--- a/client/src/app/partials/footer/footer.component.html
+++ b/client/src/app/partials/footer/footer.component.html
@@ -1,1 +1,8 @@
-<p>footer works!</p>
+<!-- Footer section -->
+<footer>
+    <nav class="navbar fixed-bottom navbar-dark bg-dark">
+        <div class="container-fluid">
+            <h6 class="display-6 navbar-text">&copy; Copyright 2021</h6>
+        </div>
+    </nav>
+</footer>
