--- a/client/src/app/partials/header/header.component.html
+++ b/client/src/app/partials/header/header.component.html
@@ -1,1 +1,37 @@
-<p>header works!</p>
+<!-- Main navigation -->
+<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+
+  <div class="container-fluid">
+    <a class="navbar-brand" href="/">My Web App</a>
+
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
+      aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarSupportedContent">
+      <ul class="navbar-nav ml-auto mb-2 mb-lg-0">
+        <li class="nav-item">
+          <a class="nav-link" aria-current="page" href="/home"><i class="fas fa-lg fa-house-user"></i> Home </a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" aria-current="page" href="/about"> <i class="far fa-lg fa-file-alt"></i> About </a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" aria-current="page" href="/services"><i class="fas fa-lg fa-concierge-bell"></i> Services
+          </a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" aria-current="page" href="/products"> <i class="fab fa-lg fa-product-hunt"></i> Products
+          </a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" aria-current="page" href="/book/list"> <i class="fas fa-lg fa-book-reader"></i> Books
+          </a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" aria-current="page" href="/contact"><i class="fas fa-lg fa-id-badge"></i> Contact Us </a>
+        </li>
+      </ul>
+    </div>
+  </div>
+</nav>
