--- a/client/src/app/pages/contact-us/contact-us.component.html
+++ b/client/src/app/pages/contact-us/contact-us.component.html
@@ -1,1 +1,23 @@
-<p>contact-us works!</p>
+<main class="container">
+    <div class='bg-light p-5 rounded'>
+        <p>Please leave your information in the contact form below.</p>
+        <a href="https://getbootstrap.com/docs/5.0/forms/overview/">Link to examples of html tags that can be used for
+            forms.</a>
+
+        <br />
+        <br />
+        <form>
+            <div class="mb-3">
+                <label for="email" class="form-label">Email address</label>
+                <input type="email" class="form-control" id="email" aria-describedby="emailHelp">
+                <div id="emailHelp" class="form-text">Sample format as follows: aaaaaa@aaa.com</div>
+            </div>
+            <div class="mb-3">
+                <label for="firstname" class="form-label">Password</label>
+                <input type="text" class="form-control" id="firstname">
+            </div>
+            <button type="submit" class="btn btn-primary">Submit</button>
+        </form>
+
+    </div>
+</main>
