fixed label on contact me page

--- a/client/src/app/pages/contact-us/contact-us.component.html
+++ b/client/src/app/pages/contact-us/contact-us.component.html
@@ -13,7 +13,7 @@
                 <div id="emailHelp" class="form-text">Sample format as follows: aaaaaa@aaa.com</div>
             </div>
             <div class="mb-3">
-                <label for="firstname" class="form-label">Password</label>
+                <label for="firstname" class="form-label">First name</label>
                 <input type="text" class="form-control" id="firstname">
             </div>
             <button type="submit" class="btn btn-primary">Submit</button>
