styled tip for contact us form

--- a/client/src/app/pages/contact-us/contact-us.component.html
+++ b/client/src/app/pages/contact-us/contact-us.component.html
@@ -10,7 +10,7 @@
             <div class="mb-3">
                 <label for="email" class="form-label">Email address</label>
                 <input type="email" class="form-control" id="email" aria-describedby="emailHelp">
-                <div id="emailHelp" class="form-text">Sample format as follows: aaaaaa@aaa.com</div>
+                <div id="emailHelp" class="form-text"><small>Sample format as follows: aaaaaa@aaa.com</small></div>
             </div>
             <div class="mb-3">
                 <label for="firstname" class="form-label">First name</label>
