--- a/client/src/app/partials/header/header.component.html
+++ b/client/src/app/partials/header/header.component.html
@@ -25,7 +25,7 @@
           </a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" aria-current="page" href="/book/list"> <i class="fas fa-lg fa-book-reader"></i> Books
+          <a class="nav-link" aria-current="page" href="/books"> <i class="fas fa-lg fa-book-reader"></i> Books
           </a>
         </li>
         <li class="nav-item">
