--- a/client/src/app/bookstore/bookstore.component.html
+++ b/client/src/app/bookstore/bookstore.component.html
@@ -1,1 +1,54 @@
-<p>bookstore works!</p>
+<main class="container-fluid">
+    <div class="row">
+        <div class="col-md-offset-3 col-md-12">
+           <!-- if (typeof displayName == 'string' && displayName) --> 
+            <a href="/book/add" class="btn btn-primary" role="button">
+            <i class="fas fa-plus-circle"> Add a Book</i>
+            </a>
+            <!-- if close -->
+
+            <br />
+            <table class="table table-sm table-responsive-sm table-bordered table-striped table-hover">
+                <!-- Header Row -->
+                <thead>
+                    <tr >
+                        <th class="text-center" scope="col">Title</th>
+                        <th class="text-center" scope="col">Author</th>
+                        <th class="text-center" scope="col">Published</th>
+                        <th class="text-center" scope="col">Description</th>
+                        <th class="text-center" scope="col">Price</th>
+                        <!-- if (typeof displayName == 'string' && displayName) -->
+                        <th class="text-center" scope="col"></th>
+                        <th class="text-center" scope="col"></th>
+                        <!-- if close -->
+                    </tr >
+                </thead>
+    
+                <!-- Repeatable Template Row -->
+                <tbody>
+                <!--  for(let count = 0; count < books.length; count++) -->
+                    <tr>
+                            <th class="text-center" scope="row">books[count].name</th>
+                            <td class="text-center">books[count].author</td>
+                            <td class="text-center">books[count].published</td>
+                            <td class="text-center">books[count].description</td>
+                            <td class="text-center">books[count].price</td>
+                            <!-- if (typeof displayName == 'string' && displayName) -->
+                            <td class="text-center" scope="row">
+                                <a href="/book/edit/books[count]._id" class="btn btn-primary btn-sm">
+                                    <i class="fas fa-pencil-alt"> Edit</i>
+                                </a>
+                            </td>
+                            <td class="text-center" scope="row">
+                                <a href="/book/delete/books[count]._id" class="btn btn-danger btn-sm">
+                                    <i class="fas fa-trash-alt"> Delete</i>
+                                </a>
+                            </td>
+                            <!-- if close -->
+                    </tr>
+                     <!-- for close -->
+                </tbody>
+            </table>
+        </div>
+    </div>
+    </main>
