--- a/client/src/app/bookstore/bookstore.component.html
+++ b/client/src/app/bookstore/bookstore.component.html
@@ -1,4 +1,4 @@
-<main class="container-fluid">
+<main class="container-fluid p-5">
     <div class="row">
         <div class="col-md-offset-3 col-md-12">
            <!-- if (typeof displayName == 'string' && displayName) --> 
