--- a/client/src/app/bookstore/bookstore.component.html
+++ b/client/src/app/bookstore/bookstore.component.html
@@ -2,7 +2,7 @@
     <div class="row">
         <div class="col-md-offset-3 col-md-12">
            <!-- if (typeof displayName == 'string' && displayName) --> 
-            <a href="/book/add" class="btn btn-primary mb-3" role="button">
+            <a href="/books/details" class="btn btn-primary mb-3" role="button">
             <i class="fas fa-plus-circle"> Add a Book</i>
             </a>
             <!-- if close -->
