added navigation for book edit button click

--- a/client/src/app/bookstore/bookstore.component.html
+++ b/client/src/app/bookstore/bookstore.component.html
@@ -35,7 +35,7 @@
                             <td class="text-center">books[count].price</td>
                             <!-- if (typeof displayName == 'string' && displayName) -->
                             <td class="text-center" scope="row">
-                                <a href="/book/edit/books[count]._id" class="btn btn-primary btn-sm">
+                                <a href="/books/edit" class="btn btn-primary btn-sm"> <!-- /books[count]._id -->
                                     <i class="fas fa-pencil-alt"> Edit</i>
                                 </a>
                             </td>
