--- a/client/src/app/bookstore/bookstore.component.html
+++ b/client/src/app/bookstore/bookstore.component.html
@@ -2,7 +2,7 @@
     <div class="row">
         <div class="col-md-offset-3 col-md-12">
            <!-- if (typeof displayName == 'string' && displayName) --> 
-            <a href="/books/details" class="btn btn-primary mb-3" role="button">
+            <a href="/books/add" class="btn btn-primary mb-3" role="button">
             <i class="fas fa-plus-circle"> Add a Book</i>
             </a>
             <!-- if close -->
@@ -35,7 +35,7 @@
                             <td class="text-center">books[count].price</td>
                             <!-- if (typeof displayName == 'string' && displayName) -->
                             <td class="text-center" scope="row">
-                                <a href="/books/edit" class="btn btn-primary btn-sm"> <!-- /books[count]._id -->
+                                <a href="/books/update" class="btn btn-primary btn-sm"> <!-- /books[count]._id -->
                                     <i class="fas fa-pencil-alt"> Edit</i>
                                 </a>
                             </td>
