--- a/client/src/app/bookstore/book-update/book-update.component.html
+++ b/client/src/app/bookstore/book-update/book-update.component.html
@@ -2,26 +2,26 @@
     <div class='bg-light p-5 rounded'>
         <div class="row">
             <div class="col-md-offset-3 col-md-12">
-                <form action="/book/add" method="POST">
+                <form action="/book/update" method="POST">
                     <div class="form-group">
                         <label for="bookName">Book Title</label>
-                        <input type="text" class="form-control" name="bookName" id="bookName" required>
+                        <input type="text" class="form-control" name="bookName" id="bookName" [value]="[book?.name]">
                     </div>
                     <div class="form-group">
                         <label for="bookAuthor">Author</label>
-                        <input type="text" class="form-control" name="bookAuthor" id="bookAuthor" required>
+                        <input type="text" class="form-control" name="bookAuthor" id="bookAuthor" [value]="[book?.author]">
                     </div>
                     <div class="form-group">
                         <label for="bookPublished">Book Published</label>
-                        <input type="text" class="form-control" name="bookPublished" id="bookPublished" required>
+                        <input type="text" class="form-control" name="bookPublished" id="bookPublished" [value]="[book?.published]">
                     </div>
                     <div class="form-group">
                         <label for="bookDescription">Description</label>
-                        <textarea class="form-control" name="bookDescription" id="bookDescription" required></textarea>
+                        <textarea class="form-control" name="bookDescription" id="bookDescription" [value]="[book?.description]"></textarea>
                     </div>
                     <div class="form-group">
                         <label for="bookPrice">Price</label>
-                        <input type="text" class="form-control" name="bookPrice" id="bookPrice" required>
+                        <input type="text" class="form-control" name="bookPrice" id="bookPrice" [value]="[book?.price]">
                     </div>
                     <button type="submit" class="btn btn-primary m-3">Update Book</button>
                     <button href="/books" class="btn btn-warning m-3">Cancel</button>
