--- a/client/src/app/bookstore/book-update/book-update.component.html
+++ b/client/src/app/bookstore/book-update/book-update.component.html
@@ -2,29 +2,29 @@
     <div class='bg-light p-5 rounded'>
         <div class="row">
             <div class="col-md-offset-3 col-md-12">
-                <form action="/book/update" method="POST">
+                <form (submit)="onUpdateBook(postForm)" #postForm="ngForm">
                     <div class="form-group">
                         <label for="bookName">Book Title</label>
-                        <input type="text" class="form-control" name="bookName" id="bookName" [value]="[book?.name]">
+                        <input type="text" class="form-control" name="name" [ngModel]="book?.name" #name="ngModel" required>
                     </div>
                     <div class="form-group">
                         <label for="bookAuthor">Author</label>
-                        <input type="text" class="form-control" name="bookAuthor" id="bookAuthor" [value]="[book?.author]">
+                        <input type="text" class="form-control" name="author"  [ngModel]="book?.author" #author="ngModel" required>
                     </div>
                     <div class="form-group">
                         <label for="bookPublished">Book Published</label>
-                        <input type="text" class="form-control" name="bookPublished" id="bookPublished" [value]="[book?.published]">
+                        <input type="text" class="form-control" name="published" [ngModel]="book?.published" #published="ngModel" required>
                     </div>
                     <div class="form-group">
                         <label for="bookDescription">Description</label>
-                        <textarea class="form-control" name="bookDescription" id="bookDescription" [value]="[book?.description]"></textarea>
+                        <textarea class="form-control" name="description" [ngModel]="book?.description" #description="ngModel" ></textarea>
                     </div>
                     <div class="form-group">
                         <label for="bookPrice">Price</label>
-                        <input type="text" class="form-control" name="bookPrice" id="bookPrice" [value]="[book?.price]">
+                        <input type="text" class="form-control" name="price" [ngModel]="book?.price" #price="ngModel" required>
                     </div>
                     <button type="submit" class="btn btn-primary m-3">Update Book</button>
-                    <button href="/books" class="btn btn-warning m-3">Cancel</button>
+                    <button [routerLink]="['/books']" class="btn btn-warning m-3">Cancel</button>
                 </form>
             </div>
         </div>
