--- a/client/src/app/partials/header/header.component.html
+++ b/client/src/app/partials/header/header.component.html
@@ -31,9 +31,12 @@
         <li class="nav-item">
           <a class="nav-link" aria-current="page" href="/contact"><i class="fas fa-lg fa-id-badge"></i> Contact Us </a>
         </li>
-        
         <li *ngIf='!isLoggedIn()' class="nav-item">
           <a class="nav-link" routerLink="/login"><i class="fas fa-lg fa-sign-in-alt"></i> Login </a>
+        </li>
+        <li *ngIf='isLoggedIn()' class="nav-item">
+          <a (click)='onLogoutClick()' class="nav-link" href="/login">
+            <i class="fas fa-lg fa-sign-out-alt"></i> Logout </a>
         </li>
       </ul>
     </div>
