added logic for restrincting access to certain functinality

--- a/client/src/app/partials/header/header.component.html
+++ b/client/src/app/partials/header/header.component.html
@@ -24,7 +24,7 @@
           <a class="nav-link" aria-current="page" href="/products"> <i class="fab fa-lg fa-product-hunt"></i> Products
           </a>
         </li>
-        <li class="nav-item">
+        <li *ngIf='isLoggedIn()' class="nav-item">
           <a class="nav-link" aria-current="page" href="/books"> <i class="fas fa-lg fa-book-reader"></i> Books
           </a>
         </li>
@@ -35,7 +35,7 @@
           <a class="nav-link" routerLink="/login"><i class="fas fa-lg fa-sign-in-alt"></i> Login </a>
         </li>
         <li *ngIf='isLoggedIn()' class="nav-item">
-          <a (click)='onLogoutClick()' class="nav-link" href="/login">
+          <a (click)='onLogoutClick()' class="nav-link">
             <i class="fas fa-lg fa-sign-out-alt"></i> Logout </a>
         </li>
       </ul>
