--- a/client/src/app/partials/header/header.component.html
+++ b/client/src/app/partials/header/header.component.html
@@ -11,25 +11,25 @@
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav ml-auto mb-2 mb-lg-0">
         <li class="nav-item">
-          <a class="nav-link" aria-current="page" href="/home"><i class="fas fa-lg fa-house-user"></i> Home </a>
+          <a class="nav-link" aria-current="page" routerLink="/home"><i class="fas fa-lg fa-house-user"></i> Home </a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" aria-current="page" href="/about"> <i class="far fa-lg fa-file-alt"></i> About </a>
+          <a class="nav-link" aria-current="page" routerLink="/about"> <i class="far fa-lg fa-file-alt"></i> About </a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" aria-current="page" href="/services"><i class="fas fa-lg fa-concierge-bell"></i> Services
+          <a class="nav-link" aria-current="page" routerLink="/services"><i class="fas fa-lg fa-concierge-bell"></i> Services
           </a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" aria-current="page" href="/products"> <i class="fab fa-lg fa-product-hunt"></i> Products
+          <a class="nav-link" aria-current="page" routerLink="/products"> <i class="fab fa-lg fa-product-hunt"></i> Products
           </a>
         </li>
         <li *ngIf='isLoggedIn()' class="nav-item">
-          <a class="nav-link" aria-current="page" href="/books"> <i class="fas fa-lg fa-book-reader"></i> Books
+          <a class="nav-link" aria-current="page" routerLink="/books"> <i class="fas fa-lg fa-book-reader"></i> Books
           </a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" aria-current="page" href="/contact"><i class="fas fa-lg fa-id-badge"></i> Contact Us </a>
+          <a class="nav-link" aria-current="page" routerLink="/contact"><i class="fas fa-lg fa-id-badge"></i> Contact Us </a>
         </li>
         <li *ngIf='!isLoggedIn()' class="nav-item">
           <a class="nav-link" routerLink="/login"><i class="fas fa-lg fa-sign-in-alt"></i> Login </a>
